<resources>
    <string name="app_name">SeHun</string>

    <!--HomeActivity-->


    <!--로그인뷰-->
    <string name="tv_signin_id">깃허브 아이디</string>
    <string name="tv_signin_pw">비밀번호</string>
    <string name="et_signin_id">깃허브 아이디를 입력해주세요.</string>
    <string name="et_signin_pw">비밀번호를 입력해주세요.</string>
    <string name="btn_signin_login">로그인</string>
    <string name="btn_signin_signup">회원가입</string>

    <!--회원가입뷰-->
    <string name="tv_signup_signup">회원가입</string>
    <string name="tv_signup_name">이름</string>
    <string name="et_signup_name">이름을 입력해주세요.</string>
    <string name="tv_signup_id">아이디</string>
    <string name="et_signup_id">깃허브 아이디를 입력해주세요.</string>
    <string name="tv_signup_pw">비밀번호</string>
    <string name="et_signup_pw">비밀번호를 입력해주세요.</string>
    <string name="btn_signup_done">회원가입</string>

    <!--홈 뷰-->
    <string name="tv_home_name">이름</string>
    <string name="tv_home_username">김세훈</string>
    <string name="tv_home_age">나이</string>
    <string name="tv_home_userage">25</string>
    <string name="tv_home_mbti">MBTI</string>
    <string name="tv_home_usermbti">ENFJ</string>
    <string name="tv_home_introduce">소개</string>
    <string name="tv_home_userintroduce">하잉</string>
    <string name="btn_home_followerlist">팔로워 목록</string>
    <string name="btn_home_repositorylist">레포지토리 목록</string>

    <!--홈 프래그먼트-->
    <string name="tv_homefragment_github">GitHub</string>
    <string name="tv_homefragment_following">팔로잉</string>
    <string name="tv_homefragment_follower">팔로워</string>
    <string name="tv_homefragment_1">FOLLOWING</string>
    <string name="tv_homefragment_2">FOLLOWER</string>

    <!--카메라 프래그먼트-->
    <string name="tv_camera_photo">사진을 첨부해주세요</string>
    <string name="tv_camera_upload">첨부하기</string>


    <!-- 바텀 네비게이션 -->
    <string name="menu_profile">프로필</string>
    <string name="menu_home">홈</string>
    <string name="menu_camera">카메라</string>


</resources>